# fdtd

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  Makefile  README.md  backend.py  example.py  fdtd.py  license  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  source.py
.github/workflows/: publish-pypi.yml  publish.yml  run-tests.yml  tests.yml
docs/: conf.py  demo_fft_code.py  examples.rst  fdtd.rst  impedance_and_S_params.md  index.rst
examples/: 00-introduction.ipynb  00-quick-start.ipynb  01-basic-example.ipynb  01-basic-example.py  02-absorbing-object.ipynb  02-absorbing-object.py  03-objects-of-arbitrary-shape.ipynb  04-performance-profiling.ipynb  05-lenses-and-analysing-lensing-actions.ipynb  06-GRIN-medium-and-analysing-refraction.ipynb  GRIN medium and analysing refraction.py  Test-LGrid.ipynb  example.py  lenses and analysing lensing actions.py
examples/misc/: dBmap.py  readme.md  ultra_low_profile_lens_antenna.py
examples/misc2/: GRIN_MTM_sim.py  (+2 more)
fdtd/: __init__.py  aethergrid.py  backend.py  boundaries.py  constants.py  conversions.py  detectors.py  fourier.py  grid.py  lgrid.py  lgrid.test.py  objects.py  operators.py  operators2.py  project_outline.txt  source.py  sources.py  typing.py  typing_.py  visualization.py  waveforms.py
tests/: conftest.py  fixtures.py  test_antenna_impedance.py  test_backend.py  test_boundaries.py  test_detectors.py  test_fft.py  test_grid.py  test_objects.py  test_sources.py  test_typing.py  test_visualization.py  test_waveforms.py
