[metadata]
name = fdtd
version = 0.2.8
description = a 3D electromagnetic FDTD simulator written in Python
author = Floris Laporte
author_email = floris.laporte@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/flaport/fdtd
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python :: 3
  Operating System :: OS Independent
  License :: OSI Approved :: MIT License
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Physics

[options]
packages =
	fdtd
install_requires =
  tqdm
  numpy
  scipy
  matplotlib

[options.extras_require]
dev =
  black
  pytest
  nbstripout
  pre-commit
  ipykernel
  line_profiler
  bump2version
  twine
  build
docs =
  sphinx
  nbsphinx
  sphinx-rtd-theme
